# rent-the-runway

./: .env.example  .gitignore  README.md  executable.sh  main.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/dataset/: rent_the_runway.yaml
conf/hydra/job_logging/: logging_custom.yaml
conf/hydra/run/: run_custom.yaml
src/: factory.py  s3.py
src/core/: data_analysis.py  logger.py  plot_settings_handler.py
